<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_vk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:text="@string/label_vk"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vk_btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/label_vk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_vk"
        app:layout_constraintTop_toTopOf="@+id/label_vk"
        android:drawableLeft="@drawable/vk"
        android:text="@string/vk"/>

    <TextView
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:text="@string/label_email"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_vk" />

    <Button
        android:id="@+id/email_btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_email"
        app:layout_constraintTop_toTopOf="@+id/label_email"
        android:drawableLeft="@drawable/ic_email"
        android:text="@string/email"/>
</androidx.constraintlayout.widget.ConstraintLayout>